added booking & details page

--- a/src/pages/bookings/bookings.scss
+++ b/src/pages/bookings/bookings.scss
@@ -1,3 +1,15 @@
 page-bookings {
-
+    // .bike-number{
+    //     // font-size: 18px !important;
+    //     // font-weight: bold;
+    // }
+    .scroll-content{
+        padding-top:0 !important;
+        background: #ededed;
+        padding-left: 0px !important;
+        padding-right: 0px !important;
+    }
+    .no-bookings{
+        height: 120px;
+    }
 }
