location page updates

--- a/src/pages/location-pick/location-pick.scss
+++ b/src/pages/location-pick/location-pick.scss
@@ -1,6 +1,6 @@
 page-location-pick {
     #map_canvas {
-        height: 90% !important;
+        height: 100% !important;
       }
-
+      ion-header[transparent] .toolbar-background { background: transparent;}
 }
