--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -112,6 +112,10 @@ $toolbar-md-active-color:                 #fff;
 .total-currency{
   font-weight: bold;
 }
+.text-bold{
+  font-weight: bold;
+}
+//$text-input-highlight-color-valid:#FC8019;
 // Ionicons
 // --------------------------------------------------
 // The premium icon font for Ionic. For more info, please see:
