--- a/src/components/g-map/g-map.html
+++ b/src/components/g-map/g-map.html
@@ -1,4 +1,4 @@
-<div id="map_canvas" style="position: relative">
+<div id="map_canvas" style="position: relative" ion-fixed sticky>
   <img src="assets/icon/left-arrow_24px.png" style="position: absolute; left:15px;top:10px;" />
     <!-- <ion-icon style="position: absolute; left:10px;top:5px;font-size: 24px;" name="arrow-back"></ion-icon> -->
   <img src="assets/icon/Marker-40-80-120px/icons8-marker-40-red.png" style="position: absolute; left:50%;top:50%;margin-left: -20px;margin-top: -39px" />
