--- a/src/components/g-map/g-map.scss
+++ b/src/components/g-map/g-map.scss
@@ -1,9 +1,10 @@
 g-map {
     #map_canvas {
-        height: 100% !important;
+        min-height: 40% !important;
+        max-height: 60% !important;
         width: 100%;
     position: fixed;
-    left: 0;
-    top: 0px;
+    left: 0 !important;
+    top: 0px !important;
       }
 }
