--- a/src/pages/location-pick/location-pick.scss
+++ b/src/pages/location-pick/location-pick.scss
@@ -10,6 +10,8 @@ page-location-pick {
     // }
     .lbl-text{
       font-size: 10px !important;
+      text-transform:uppercase;
+      color: #999;
     }
 
     .btn-save{
