finding distance logics, need to sort all the code.

--- a/src/pages/location-pick/location-pick.scss
+++ b/src/pages/location-pick/location-pick.scss
@@ -38,4 +38,11 @@ page-location-pick {
     .type .button-inner{
       justify-content:flex-start;
   }
+
+  .saveas-btn-group button{
+    padding-left: 0 !important;
+  }
+  .saveas-btn-group ion-label{
+    margin-top: 0 !important;
+  }
 }
