--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -67,3 +67,6 @@
     }
   }
 }
+.toolbar-title.toolbar-title-md, 
+.toolbar-title.toolbar-title-ios, 
+.toolbar-title.toolbar-title-wp { color: map-get($colors, brand);}
