--- a/src/pages/book-service/book-service.scss
+++ b/src/pages/book-service/book-service.scss
@@ -1,3 +1,38 @@
 page-book-service {
-
+    ion-card {
+        position: relative;
+        text-align: center;
+      }
+    ion-card.card{
+        height: 80px;
+    }
+      .card-title {
+        position: absolute;
+        top: 36%;
+        font-size: 2.0em;
+        width: 100%;
+        font-weight: bold;
+        color: color($colors, brand-primary)
+      }
+    
+      .card-subtitle {
+        font-size: 1.0em;
+        position: absolute;
+        top: 52%;
+        width: 100%;
+        color: #fff;
+      }
+      .book-now{
+          height:70px;
+          background: color($colors, primary);
+      }
+      .book-now label{
+          font-size: 24px;
+          font-weight: 400;
+          line-height: 70px;
+          color:color($colors, white);
+      }
+      .logo-title div{
+          padding-left: 0 !important;
+      }
 }
